# yatta

./: .gitignore  pyproject.toml  run.py  shell.nix  yatta.py
data/: config.py  config.yatta
src/: cli.py  context.py  core.py  gui.py  show.py  utils.py
